--- a/scripts/directives/sidebar/sidebar.html
+++ b/scripts/directives/sidebar/sidebar.html
@@ -52,7 +52,9 @@
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.projetos"><i class="fa fa-folder-open fa-fw"></i> Projetos</a>
             </li>
-
+				<li ui-sref-active="active">
+                <a ui-sref="dashboard.amostras"><i class="fa fa-flask fa-fw"></i> Amostras</a>
+            </li>
             <!-- Template Menus -->
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Forms</a>
