--- a/scripts/directives/sidebar/sidebar.html
+++ b/scripts/directives/sidebar/sidebar.html
@@ -55,7 +55,10 @@
 				    <li ui-sref-active="active">
                 <a ui-sref="dashboard.amostras"><i class="fa fa-flask fa-fw"></i> Amostras</a>
             </li>
-
+				</li>
+				    <li ui-sref-active="active">
+                <a ui-sref="dashboard.corridas"><i class="fa fa-play-circle-o  fa-fw"></i> Corridas</a>
+            </li>
             <!-- Template Menus -->
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Forms</a>
