Edição usuario e Logout

--- a/scripts/directives/sidebar/sidebar.html
+++ b/scripts/directives/sidebar/sidebar.html
@@ -16,7 +16,8 @@
 
             <!-- GENSEQ MENUS -->
             <!-- TESTE DA RESTRICT ACCESS, A COMPARAÇÃO NÃO PRECISA SER NECESSARIAMENTE ESSA  -->
-            <li restrict access="admin" ng-class="{active: collapseVar==21}">{{dropDown}}
+            <!-- <li restrict access="admin" ng-class="{active: collapseVar==21}">{{dropDown}} -->
+            <li ng-class="{active: collapseVar==21}">{{dropDown}}
                 <a href="" ng-click="check(21)"><i class="fa fa-user fa-fw"></i> Usuários<span
                         class="fa arrow"></span></a>
                 <ul class="nav nav-second-level" collapse="collapseVar!=21">
@@ -27,7 +28,7 @@
                         <a ui-sref="dashboard.editar_cadastro"><i class="fa fa-edit fa-fw"></i> Editar Cadastro</a>
                     </li>
 	              </ul>
-            </li> 
+            </li>
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.sistemas"><i class="fa fa-desktop fa-fw"></i> Sistemas</a>
             </li>
