--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- endbuild -->
 
 
-
+    <!-- REMOVIDO OBJ GOOGLEANALYTICS
     <script>
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -53,7 +53,9 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
+    -->
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles/genseq.css">
 
     <!-- Custom Fonts -->
 
