--- a/scripts/directives/header/header.html
+++ b/scripts/directives/header/header.html
@@ -1,13 +1,14 @@
 <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
     <div class="navbar-header">
 
+        <!-- Toggle para barra lateral caso a viewport seja considerada Mobile -->
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+        <a class="navbar-brand" href="index.html">UFPR - NFN<span> Sistema de Gerenciamento de Projetos de Sequenciamento</p></a>
     </div>
     <!-- /.navbar-header -->
     <header-notification></header-notification>
