--- a/scripts/directives/sidebar/sidebar.html
+++ b/scripts/directives/sidebar/sidebar.html
@@ -1,7 +1,9 @@
 <div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav in" id="side-menu">
+            <!-- SEARCH REMOVIDO
             <sidebar-search></sidebar-search>
+            -->
             <li ui-sref-active="active">
                 <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
@@ -17,7 +19,7 @@
             <!-- GENSEQ MENUS -->
             <!-- TESTE DA RESTRICT ACCESS, A COMPARAÇÃO NÃO PRECISA SER NECESSARIAMENTE ESSA  -->
             <!-- <li restrict access="admin" ng-class="{active: collapseVar==21}">{{dropDown}} -->
-            <li ng-class="{active: collapseVar==21}">{{dropDown}}
+            <li restrict access="1" ng-class="{active: collapseVar==21}">{{dropDown}}
                 <a href="" ng-click="check(21)"><i class="fa fa-user fa-fw"></i> Usuários<span
                         class="fa arrow"></span></a>
                 <ul class="nav nav-second-level" collapse="collapseVar!=21">
@@ -25,7 +27,7 @@
                         <a ui-sref="dashboard.novo_usuario"><i class="fa fa-plus-square fa-fw"></i> Novo Usuario</a>
                     </li>
                     <li ui-sref-active="active">
-                        <a ui-sref="dashboard.editar_cadastro"><i class="fa fa-edit fa-fw"></i> Editar Cadastro</a>
+                        <a ui-sref="dashboard.editar_cadastro"><i class="fa fa-edit fa-fw"></i> Editar Cadastros</a>
                     </li>
 	              </ul>
             </li>
