--- a/scripts/directives/sidebar/sidebar.html
+++ b/scripts/directives/sidebar/sidebar.html
@@ -1,145 +1,172 @@
 <div class="navbar-default sidebar" role="navigation">
-    <div class="sidebar-nav navbar-collapse">
-        <ul class="nav in" id="side-menu">
-            <!-- SEARCH REMOVIDO
+	<div class="sidebar-nav navbar-collapse">
+		<ul class="nav in" id="side-menu">
+			<!-- SEARCH REMOVIDO
             <sidebar-search></sidebar-search>
             -->
-            <li ui-sref-active="active">
-                <a ui-sref="dashboard.home"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
-            </li>
-            <li ui-sref-active="active">
+			<li ui-sref-active="active">
+				<a ui-sref="dashboard.home">
+					<i class="fa fa-dashboard fa-fw"/> Dashboard</a>
+			</li>
+			<li ui-sref-active="active">
 
-                <a ui-sref="dashboard.chart"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span></span></a>
+				<a ui-sref="dashboard.chart">
+					<i class="fa fa-bar-chart-o fa-fw"/> Charts<span/>
+				</a>
 
-            </li>
-            <li ui-sref-active="active">
-                <a ui-sref="dashboard.table"><i class="fa fa-table fa-fw"></i> Tables</a>
-            </li>
+			</li>
+			<li ui-sref-active="active">
+				<a ui-sref="dashboard.table">
+					<i class="fa fa-table fa-fw"/> Tables</a>
+			</li>
 
-            <!-- GENSEQ MENUS -->
-            <!-- TESTE DA RESTRICT ACCESS, A COMPARAÇÃO NÃO PRECISA SER NECESSARIAMENTE ESSA  -->
-            <!-- <li restrict access="admin" ng-class="{active: collapseVar==21}">{{dropDown}} -->
-            <li restrict access="1" ng-class="{active: collapseVar==21}">{{dropDown}}
-                <a href="" ng-click="check(21)"><i class="fa fa-user fa-fw"></i> Usuários<span
-                        class="fa arrow"></span></a>
-                <ul class="nav nav-second-level" collapse="collapseVar!=21">
-                    <li ui-sref-active="active">
-                        <a ui-sref="dashboard.novo_usuario"><i class="fa fa-plus-square fa-fw"></i> Novo Usuario</a>
-                    </li>
-                    <li ui-sref-active="active">
-                        <a ui-sref="dashboard.editar_cadastro"><i class="fa fa-edit fa-fw"></i> Editar Cadastros</a>
-                    </li>
-	              </ul>
-            </li>
-            <li ui-sref-active="active">
-                <a ui-sref="dashboard.sistemas"><i class="fa fa-desktop fa-fw"></i> Sistemas</a>
-            </li>
-
-            <li restrict access="1" ng-class="{active: collapseVar==11}">{{dropDown}}
-                <a href="" ng-click="check(11)"><i class="fa fa-wrench fa-fw"></i> Cadastro<span
-                        class="fa arrow"></span></a>
-                <ul class="nav nav-second-level" collapse="collapseVar!=11">
+			<!-- GENSEQ MENUS -->
+			<!-- TESTE DA RESTRICT ACCESS, A COMPARAÇÃO NÃO PRECISA SER NECESSARIAMENTE ESSA  -->
+			<!-- <li restrict access="admin" ng-class="{active: collapseVar==21}">{{dropDown}} -->
+			<li restrict access="1" ng-class="{active: collapseVar==21}">{{dropDown}}
+				<a href="" ng-click="check(21)">
+					<i class="fa fa-user fa-fw"/> Usuários<span
+                        class="fa arrow">
+					</span>
+				</a>
+				<ul class="nav nav-second-level" collapse="collapseVar!=21">
 					<li ui-sref-active="active">
-						<a ui-sref="dashboard.servicos"><i class="fa fa-gear fa-fw"></i> Serviço</a>
+						<a ui-sref="dashboard.novo_usuario">
+							<i class="fa fa-plus-square fa-fw"/> Novo Usuario</a>
 					</li>
 					<li ui-sref-active="active">
-						<a ui-sref="dashboard.sistemas"><i class="fa fa-desktop fa-fw"></i> Sistema</a>
+						<a ui-sref="dashboard.editar_cadastro">
+							<i class="fa fa-edit fa-fw"/> Editar Cadastros</a>
+					</li>
+				</ul>
+			</li>
+			<li restrict access="1" ng-class="{active: collapseVar==11}">{{dropDown}}
+				<a href="" ng-click="check(11)">
+					<i class="fa fa-wrench fa-fw"/> Cadastro<span
+                        class="fa arrow">
+					</span>
+				</a>
+				<ul class="nav nav-second-level" collapse="collapseVar!=11">
+					<li ui-sref-active="active">
+						<a ui-sref="dashboard.servicos">
+							<i class="fa fa-gear fa-fw"/> Serviço</a>
 					</li>
 					<li ui-sref-active="active">
-						<a ui-sref="dashboard.kit_deplecao"><i class="fa fa-search fa-fw"></i> Kit Depleção</a>
+						<a ui-sref="dashboard.sistemas">
+							<i class="fa fa-desktop fa-fw"/> Sistema</a>
 					</li>
 					<li ui-sref-active="active">
-						<a ui-sref="dashboard.instituicao"><i class="fa fa-building fa-fw"></i> Instituição</a>
+						<a ui-sref="dashboard.kit_deplecao">
+							<i class="fa fa-search fa-fw"/> Kit Depleção</a>
+					</li>
+					<li ui-sref-active="active">
+						<a ui-sref="dashboard.instituicao">
+							<i class="fa fa-building fa-fw"/> Instituição</a>
 					</li>
 				</ul>
 			</li>
 
-            <li ui-sref-active="active">
-                <a ui-sref="dashboard.projetos"><i class="fa fa-folder-open fa-fw"></i> Projetos</a>
-            </li>
-				    <li ui-sref-active="active">
-                <a ui-sref="dashboard.amostras"><i class="fa fa-flask fa-fw"></i> Amostras</a>
-            </li>
-				</li>
-				    <li ui-sref-active="active">
-                <a ui-sref="dashboard.corridas"><i class="fa fa-play-circle-o  fa-fw"></i> Corridas</a>
-            </li>
-            <!-- Template Menus -->
-            <li ui-sref-active="active">
-                <a ui-sref="dashboard.form"><i class="fa fa-edit fa-fw"></i> Forms</a>
-            </li>
-            <li ng-class="{active: collapseVar==1}">{{dropDown}}
-                <a href="" ng-click="check(1)"><i class="fa fa-wrench fa-fw"></i> UI Elements<span
-                        class="fa arrow"></span></a>
-                <ul class="nav nav-second-level" collapse="collapseVar!=1">
-                    <li ui-sref-active="active">
-                        <a ui-sref="dashboard.panels-wells">Panels and Wells</a>
-                    </li>
-                    <li ui-sref-active="active">
-                        <a ui-sref="dashboard.buttons">Buttons</a>
-                    </li>
-                    <li ui-sref-active="active">
-                        <a ui-sref="dashboard.notifications">Notifications</a>
-                    </li>
-                    <li ui-sref-active="active">
-                        <a ui-sref="dashboard.typography">Typography</a>
-                    </li>
-                    <li ui-sref-active="active">
-                        <a ui-sref="dashboard.icons"> Icons</a>
-                    </li>
-                    <li ui-sref-active="active">
-                        <a ui-sref="dashboard.grid">Grid</a>
-                    </li>
-                </ul>
-                <!-- /.nav-second-level -->
-            </li>
-            <li ng-class="{active: collapseVar==2}">
-                <a href="" ng-click="check(2)"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span
-                        class="fa arrow"></span></a>
-                <ul class="nav nav-second-level" collapse="collapseVar!=2">
-                    <li>
-                        <a href="">Second Level Item</a>
-                    </li>
-                    <li>
-                        <a href="">Second Level Item</a>
-                    </li>
-                    <li ng-init="third=!third" ng-class="{active: multiCollapseVar==3}">
-                        <a href="" ng-click="multiCheck(3)">Third Level <span class="fa arrow"></span></a>
-                        <ul class="nav nav-third-level" collapse="multiCollapseVar!=3">
-                            <li>
-                                <a href="">Third Level Item</a>
-                            </li>
-                            <li>
-                                <a href="">Third Level Item</a>
-                            </li>
-                            <li>
-                                <a href="">Third Level Item</a>
-                            </li>
-                            <li>
-                                <a href="">Third Level Item</a>
-                            </li>
+			<li ui-sref-active="active">
+				<a ui-sref="dashboard.projetos">
+					<i class="fa fa-folder-open fa-fw"/> Projetos</a>
+			</li>
+			<li ui-sref-active="active">
+				<a ui-sref="dashboard.amostras">
+					<i class="fa fa-flask fa-fw"/> Amostras</a>
+			</li>
+			<li restrict access="1" ui-sref-active="active">
+				<a ui-sref="dashboard.corridas">
+					<i class="fa fa-play-circle-o  fa-fw"/> Corridas</a>
+			</li>
+			<!-- Template Menus -->
+			<li ui-sref-active="active">
+				<a ui-sref="dashboard.form">
+					<i class="fa fa-edit fa-fw"/> Forms</a>
+			</li>
+			<li ng-class="{active: collapseVar==1}">{{dropDown}}
+				<a href="" ng-click="check(1)">
+					<i class="fa fa-wrench fa-fw"/> UI Elements<span
+                        class="fa arrow">
+					</span>
+				</a>
+				<ul class="nav nav-second-level" collapse="collapseVar!=1">
+					<li ui-sref-active="active">
+						<a ui-sref="dashboard.panels-wells">Panels and Wells</a>
+					</li>
+					<li ui-sref-active="active">
+						<a ui-sref="dashboard.buttons">Buttons</a>
+					</li>
+					<li ui-sref-active="active">
+						<a ui-sref="dashboard.notifications">Notifications</a>
+					</li>
+					<li ui-sref-active="active">
+						<a ui-sref="dashboard.typography">Typography</a>
+					</li>
+					<li ui-sref-active="active">
+						<a ui-sref="dashboard.icons"> Icons</a>
+					</li>
+					<li ui-sref-active="active">
+						<a ui-sref="dashboard.grid">Grid</a>
+					</li>
+				</ul>
+				<!-- /.nav-second-level -->
+			</li>
+			<li ng-class="{active: collapseVar==2}">
+				<a href="" ng-click="check(2)">
+					<i class="fa fa-sitemap fa-fw"/> Multi-Level Dropdown<span
+                        class="fa arrow">
+					</span>
+				</a>
+				<ul class="nav nav-second-level" collapse="collapseVar!=2">
+					<li>
+						<a href="">Second Level Item</a>
+					</li>
+					<li>
+						<a href="">Second Level Item</a>
+					</li>
+					<li ng-init="third=!third" ng-class="{active: multiCollapseVar==3}">
+						<a href="" ng-click="multiCheck(3)">Third Level <span class="fa arrow"/>
+						</a>
+						<ul class="nav nav-third-level" collapse="multiCollapseVar!=3">
+							<li>
+								<a href="">Third Level Item</a>
+							</li>
+							<li>
+								<a href="">Third Level Item</a>
+							</li>
+							<li>
+								<a href="">Third Level Item</a>
+							</li>
+							<li>
+								<a href="">Third Level Item</a>
+							</li>
 
-                        </ul>
-                        <!-- /.nav-third-level -->
-                    </li>
-                </ul>
-                <!-- /.nav-second-level -->
-            </li>
-            <li ng-class="{active:collapseVar==4}">
-                <a href="" ng-click="check(4)"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span
-                        class="fa arrow"></span></a>
-                <ul class="nav nav-second-level" collapse="collapseVar!=4">
-                    <li ng-class="{active: selectedMenu=='blank'}">
-                        <a ui-sref="dashboard.blank" ng-click="selectedMenu='blank'">Blank Page</a>
-                    </li>
-                    <li>
-                        <a ui-sref="login">Login Page</a>
-                    </li>
-                </ul>
-                <!-- /.nav-second-level -->
-            </li>
-            <li><a href="http://www.strapui.com/">Premium Angular Themes</a></li>
-        </ul>
-    </div>
-    <!-- /.sidebar-collapse -->
+						</ul>
+						<!-- /.nav-third-level -->
+					</li>
+				</ul>
+				<!-- /.nav-second-level -->
+			</li>
+			<li ng-class="{active:collapseVar==4}">
+				<a href="" ng-click="check(4)">
+					<i class="fa fa-files-o fa-fw"/> Sample Pages<span
+                        class="fa arrow">
+					</span>
+				</a>
+				<ul class="nav nav-second-level" collapse="collapseVar!=4">
+					<li ng-class="{active: selectedMenu=='blank'}">
+						<a ui-sref="dashboard.blank" ng-click="selectedMenu='blank'">Blank Page</a>
+					</li>
+					<li>
+						<a ui-sref="login">Login Page</a>
+					</li>
+				</ul>
+				<!-- /.nav-second-level -->
+			</li>
+			<li>
+				<a href="http://www.strapui.com/">Premium Angular Themes</a>
+			</li>
+		</ul>
+	</div>
+	<!-- /.sidebar-collapse -->
 </div>
