Modelo de Exibição Edição de Usuarios
Implementação visual, faltando interação do controller

--- a/scripts/directives/sidebar/sidebar.html
+++ b/scripts/directives/sidebar/sidebar.html
@@ -20,7 +20,7 @@
 							<i class="fa fa-plus-square fa-fw"/> Novo Usuario</a>
 					</li>
 					<li ui-sref-active="active">
-						<a ui-sref="dashboard.editar_cadastro">
+						<a ui-sref="dashboard.listar_usuarios">
 							<i class="fa fa-edit fa-fw"/> Editar Cadastros</a>
 					</li>
 				</ul>
